[package]
name = "content_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["json"] }
scraper = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }

